tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__Lithium-AAAAAAAAAAAAAAAAAAAEjw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1167,
  "prerequisites": [
    622
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Lithium can be washed out of Lepidolite Ore or centrifuged out of either Lepidolite Ore or Spodumene Ore. At MV you can electrolyze clay dust for it. Look for canyons to find hardened clay and macerate it for dust.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lLithium",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    622
  ],
  "rewards": [],
  "tasks": []
}
