tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__LongDistanceFlui-AAAAAAAAAAAAAAAAAAAJjA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2444,
  "prerequisites": [
    546
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Wouldn't it be great if you could transport your oil from a far away oil spout or oil field by pipes to your base?\n\nThis is not a problem anymore. Connect your setup on the start and end point with a Long Distance Fluid Pipeline block. In between use the associated pipe blocks - the total distance between endpoints must be more than 64 blocks apart (4 or more chunks). There can only be one start and end point per pipeline.\n\nTo actually connect it, you need to align the start LDFP block such that the arrows are facing inwards, and the opposite side of it has a LDFPP block. Put a pump on the side of the block that has the arrows and set to import. It will now attempt to import fluid to the endpoint LDFP. §2This will go as fast as you can put fluid into it.§r\n\nDo the opposite on the far side, except you don't need a pump.\n\nNow you only need to chunkload the start and end points and the fluid will be \"teleported\" to you.\n\nOf course, later on you'll probably use ender tanks to §oactually§r teleport the fluid, especially from other dims.\n\nThis setup is lag-free in the pipe blocks, so it's useful in your base as well if you want to reduce lag.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lLong Distance Fluid Pipeline",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    546
  ],
  "rewards": [],
  "tasks": []
}
