tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__Lubricant-AAAAAAAAAAAAAAAAAAAEPA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1084,
  "optional_prerequisites": [
    547,
    1273
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Using lubricant instead of water or distilled water in your cutting machines will increase their speed.\n\nYou can make lubricant out of oil, seed oil, fish oil or creosote in a distillery (or distillation tower later on). If you're able to craft a brewery you can use talc or soapstone to get much more lubricant each cycle.\n\nLube cells are required to make low tier energy hatches, so stockpile a few cells and use the rest to make your cutting machine faster.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lLubricant",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
