tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__MagnesiumSource-AAAAAAAAAAAAAAAAAAAGBA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1540,
  "prerequisites": [
    539
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Magnesite, the source of Magnesium can be found in the Twilight Forest at Y 10-40. Fullers Earth can be found on the Overworld at Y 50-70. Marble dust is a great source of Magnesium too.\nOther options in LV are Pyrope, Olivine, or Ashes.\n\n§3You only need one of the three to complete the quest.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lMagnesium Source",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    539
  ],
  "rewards": [],
  "tasks": []
}
