tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__MagnetizeYourRod-AAAAAAAAAAAAAAAAAAACSw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 587,
  "prerequisites": [
    96
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Magnetic steel rods will §oneed§r a Polarizer to craft. You'll need them later on for MV Motors and MV hatches.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lMagnetize Your Rods",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    96
  ],
  "rewards": [],
  "tasks": []
}
