tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__MagnetsMagic-AAAAAAAAAAAAAAAAAAALSw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2891,
  "prerequisites": [
    609,
    615
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Tired of running after ore or other blocks? Use a magnet! It has a limited range, but who cares? Just remember to turn it on.\n\nIn HV you can craft it into the better one, if you still need a magnet by then.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lMagnets != Magic",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    609,
    615
  ],
  "rewards": [],
  "tasks": []
}
