tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__Mercury-AAAAAAAAAAAAAAAAAAACaA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 616,
  "prerequisites": [
    617
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Mercury can be centrifuged out of redstone. If you find some cinnabar ore in a redstone vein or one of the infused stone veins you can use that too.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lMercury",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    617
  ],
  "rewards": [],
  "tasks": []
}
